layout i helhet funkar. kvar koppla rätt och räkna rätt

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,9 @@
     <div class="quiz-container">
     <div id="quiz"></div>
     </div>
+    <div id="kanvinna"></div>
     <button id="yes">Yes</button>
     <button id="no">No</button>
-    <!--<button id="submit">Submit quiz</button> -->
-    <!--<div id="results"></div> -->
 </body>
 
 <script src="js/quiz.js"></script>
