lade till chans på att vinna, alla frågor och slut på programmet

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,16 @@
     <title>jsquiz</title>
 </head>
 <body>
-    <h1>Frågor</h1>
+    <div id="fråga"></div>
     <div id="score"></div>
     <div class="quiz-container">
     <div id="quiz"></div>
     </div>
     <div id="kanvinna"></div>
+    <div id="anta"></div>
     <button id="yes">Yes</button>
     <button id="no">No</button>
+    <div id="end"></div>
 </body>
 
 <script src="js/quiz.js"></script>
